--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^5.0.1",
     "gatsby": "^3.6.2",
     "gatsby-plugin-image": "^1.7.1",
@@ -28,7 +31,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-scroll": "^1.8.2"
   },
   "devDependencies": {
     "eslint-plugin-import": "^2.23.4",
