--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "bootstrap": "^5.0.1",
@@ -31,7 +32,10 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
+    "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
+    "react-mobile-store-button": "^0.0.6",
+    "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.2"
   },
   "devDependencies": {
